--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -111,21 +111,36 @@
                   <div class="service-description">
                     {{ page.tenant_services_blurb }}
                   </div>
-                  <img src="images/learnmore_cta.png" id="tenant-service-modal-button"class="learn-more"/>
+                  <div
+                    class="learn-more-btn"
+                    id="tenant-service-modal-button"
+                  >
+                    LEARN MORE
+                  </div>
                 </div>
               <div class="services-2 services-text">
                 <div class="medium-white-text"><strong>LANDLORD</strong> REPRESENTATION</div>
                 <div class="service-description">
                     {{ page.landlord_services_blurb }}
                 </div>
-                <img src="images/learnmore_cta.png" id="landlord-service-modal-button" class="learn-more"/>
+                <div
+                    class="learn-more-btn"
+                    id="landlord-service-modal-button"
+                  >
+                    LEARN MORE
+                  </div>
               </div>
               <div class="services-text">
                 <div class="medium-white-text"><strong>INVESTMENT</strong> SALES</div>
                 <div class="service-description">
                   {{ page.investment_services_blurb }}
                 </div>
-                <img src="images/learnmore_cta.png" id="investment-service-modal-button" class="learn-more"/>
+                <div
+                    class="learn-more-btn"
+                    id="investment-service-modal-button"
+                  >
+                    LEARN MORE
+                  </div>
               </div>
             </div>
           </div>
