--- a/css/main.scss
+++ b/css/main.scss
@@ -13,6 +13,7 @@
 @import "about.scss";
 @import "experience.scss";
 @import "newsletter.scss";
+@import "services.scss";
 
 /**
  *  Do not remove the comment below. It's the markers used by gulp-inject to inject
