--- a/_includes/services-modal.html
+++ b/_includes/services-modal.html
@@ -5,14 +5,29 @@
 			<h1>{{ include.header-text }}</h1>
 		</div>
 		<div class="content">
-			<p>{{ include.body-text }}<p>
-			<div class="service-learn-more">
+			<div class="service-section">
+				<p>{{ include.body-text }}<p>
+			</div>
+			<div class="service-section service-section--learn-more">
 				<a
 					href="{{ include.link }}"
 					class="btn-learn-more btn-learn-more--orange"
 				>
 					LEARN MORE
 				</a>
+			</div>
+			<div class="service-section service-section--highlights">
+				<div class="service-highlight service-highlight--text">
+					<h5>WILSHIRE COURTYARD</h5>
+					<ul>
+						<li>5700 Wilshire - Miracle Mile</li>
+						<li>1,100,000 SF - RREEF</li>
+					</ul>
+				</div>
+				<div
+					class="service-highlight service-highlight--image"
+					style="background-image: url('http://r.ddmcdn.com/s_f/o_1/cx_462/cy_245/cw_1349/ch_1349/w_720/APL/uploads/2015/06/caturday-shutterstock_149320799.jpg')"
+				></div>
 			</div>
 		</div>
 	</div>
