--- a/_sass/mixins.scss
+++ b/_sass/mixins.scss
@@ -67,6 +67,7 @@
     left: 50%;
     transform: translate(-50%, -50%);
     width: 70%;
+    max-width: 1000px;
     font-size: 1.3em;
     text-align: center;
     background-color: white;
