--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -22,6 +22,7 @@
         {% include services-modal.html
            header-text="TENANT REPRESENTATION"
            body-text=page.tenant_services_text
+           examples=site.examples_tenant
            link="/experience.html?service=tenant"
         %}
       </div>
@@ -29,6 +30,7 @@
         {% include services-modal.html
           header-text="LANDLORD REPRESENTATION"
           body-text=page.landlord_services_text
+          examples=site.examples_landlord
           link="/experience.html?service=landlord"
          %}
       </div>
@@ -36,6 +38,7 @@
         {% include services-modal.html
           header-text="INVESTMENT SALES"
           body-text=page.investment_services_text
+          examples=site.examples_investment
           link="/experience.html?service=investment"
         %}
       </div>
