--- a/_sass/services.scss
+++ b/_sass/services.scss
@@ -61,12 +61,10 @@
   text-align: center;
 }
 
-.service-highlight {
-}
-
 .service-highlight--text {
   flex-basis: 40%;
   padding-right: 22px;
+  text-align: left;
 }
 
 .service-highlight--image {
@@ -76,4 +74,8 @@
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
+}
+
+.services-carousel {
+  text-align: center;
 }
