--- a/_layouts/experience.html
+++ b/_layouts/experience.html
@@ -71,7 +71,7 @@
             <p class="services__description">
               {{page.text_body}}
             </p>
-            <button class="contact-us-link">CONTACT US</button>
+            <button class="contact-us-link contact-us-button">CONTACT US</button>
           </div>
         </div>
         <div class="bottom">
