--- a/_sass/experience.scss
+++ b/_sass/experience.scss
@@ -12,7 +12,7 @@
     letter-spacing: 2px;
     padding-bottom: 40px;
   }
-  .contact-us-link {
+  .contact-us-button {
     border-radius: 500px;
     font-size: 1.3em;
     font-weight: 600;
