--- a/_sass/index.scss
+++ b/_sass/index.scss
@@ -402,6 +402,11 @@ a {
   -webkit-animation: load8 1.1s infinite linear;
   animation: load8 1.1s infinite linear;
 }
+
+.inline-block {
+  display: inline-block;
+}
+
 @-webkit-keyframes load8 {
   0% {
     -webkit-transform: rotate(0deg);
