--- a/_includes/services-modal.html
+++ b/_includes/services-modal.html
@@ -16,26 +16,9 @@
 					LEARN MORE
 				</a>
 			</div>
-			<div class="services-carousel">
-				{% for example in include.examples %}
-					<div>
-						<div class="service-section service-section--highlights">
-							<div class="service-highlight service-highlight--text">
-								<h5>{{ example.header }}</h5>
-								<ul>
-									{% for highlight in example.highlights %}
-										<li>{{ highlight }}</li>
-									{% endfor %}
-								</ul>
-							</div>
-							<div
-								class="service-highlight service-highlight--image"
-								style="background-image: url('{{ example.image_1 }}')"
-							></div>
-						</div>
-					</div>
-				{% endfor %}
-			</div>
+			{% include service-example.html
+				examples=include.examples
+			%}
 		</div>
 	</div>
 </div>
