--- a/_layouts/experience.html
+++ b/_layouts/experience.html
@@ -77,6 +77,7 @@
         <div class="bottom">
           {% include service-example.html
             examples=site.examples_tenant
+            multi-image=true
           %}
         </div>
 
