--- a/_sass/experience.scss
+++ b/_sass/experience.scss
@@ -1,10 +1,13 @@
 #container-experience {
-  ul.slick-dots {
-    position: absolute;
-    left: 50%;
-    transform: translateX(-50%);
-    bottom: 30px;
+  .services-carousel {
+    .slick-dots {
+      position: absolute;
+      left: 50%;
+      transform: translateX(-50%);
+      bottom: 30px;
+    }
   }
+
   .experience-section-header {
     color: white;
     font-size: 2.4em;
