--- a/_sass/services.scss
+++ b/_sass/services.scss
@@ -65,6 +65,9 @@
   flex-basis: 40%;
   padding-right: 22px;
   text-align: left;
+  @media screen and (max-width: $breakpoint-small) {
+    order: -1;
+  }
 }
 
 .highlight__list {
@@ -84,6 +87,12 @@
 
 .highlight__header {
   color: $primary-color;
+}
+
+.service-highlight {
+  @media screen and (max-width: $breakpoint-small) {
+    margin-bottom: 20px;
+  }
 }
 
 .service-highlight--image {
@@ -107,6 +116,9 @@
       font-size: 1.5em;
       margin-bottom: 10px;
     }
+  }
+  @media screen and (max-width: $breakpoint-small) {
+    flex-direction: column;
   }
 }
 
