--- a/_layouts/experience.html
+++ b/_layouts/experience.html
@@ -49,52 +49,76 @@
               <a
                 href="/experience?service=tenant"
                 id="tenant-service-link"
-                class="service__link active"
+                class="state__link state--tenant"
               >
                 TENANT<br /> REPRESENTATION
               </a>
               <a
                 href="/experience?service=landlord"
-                id="tenant-service-link"
-                class="service__link"
+                id="landlord-service-link"
+                class="state__link state--landlord"
               >
                 LANDLORD<br /> REPRESENTATION
               </a>
               <a
-                href="/experience?service=sales"
-                id="tenant-service-link"
-                class="service__link"
+                href="/experience?service=investment"
+                id="investment-service-link"
+                class="state__link state--investment"
               >
                 INVESTMENT<br /> SALES
               </a>
             </div>
-            <p class="services__description">
-              {{page.text_body}}
-            </p>
+            <!-- <div class="services__description description-default">
+              {{ page.text_body }}
+            </div> -->
+            <div class="state state--tenant services__description">
+              {{ page.tenant_services_text }}
+            </div>
+            <div class="state state--landlord services__description">
+              {{ page.landlord_services_text }}
+            </div>
+            <div class="state state--investment services__description">
+              {{ page.investment_services_text }}
+            </div>
             <button class="contact-us-link contact-us-button">CONTACT US</button>
           </div>
         </div>
         <div class="bottom">
-          {% include service-example.html
-            examples=site.examples_tenant
-            multi-image=true
-          %}
+          <div class="state state--tenant">
+            {% include service-example.html
+              examples=site.examples_tenant
+              multi-image=true
+            %}
+          </div>
+          <div class="state state--landlord">
+            {% include service-example.html
+              examples=site.examples_landlord
+              multi-image=true
+            %}
+          </div>
+          <div class="state state--investment">
+            {% include service-example.html
+              examples=site.examples_investment
+              multi-image=true
+            %}
+          </div>
         </div>
 
         {% include footer.html %}
       </div>
     </div>
     {% include include-scripts.html %}
+    <script type="text/javascript" src="/scripts/experience.js"></script>
     <script type="text/javascript">
       $(document).ready(function() {
 
-      var sectionQuery = (location.search.match(new RegExp('section' + "=(.*?)($|\&)", "i")) || [])[1]
+        var sectionQuery = (location.search.match(new RegExp('section' + "=(.*?)($|\&)", "i")) || [])[1]
 
-      if (sectionQuery === "studies") {
-        window.setTimeout(function() {
-          window.scrollTo(0, $('.bottom').offset().top);
-        }, 500)
-      }
+        if (sectionQuery === "studies") {
+          window.setTimeout(function() {
+            window.scrollTo(0, $('.bottom').offset().top);
+          }, 500)
+        }
 
         if (compatibleBrowser()) {
           window.sr = ScrollReveal();
