--- a/_layouts/experience.html
+++ b/_layouts/experience.html
@@ -40,67 +40,69 @@
     {% include contact-form.html %}
     <div class="main">
       <div id="container-experience">
-        <div class="top">
-          <img src="images/logo.png" class="logo-upper-left"/>
-          <div class="ham-menu"></div>
-          <div class="services__hero">
-            <div class="experience-section-header">{{page.text_title}}</div>
-            <div class="services__links">
-              <a
-                href="/experience?service=tenant"
-                id="tenant-service-link"
-                class="state__link state--tenant"
-              >
-                TENANT<br /> REPRESENTATION
-              </a>
-              <a
-                href="/experience?service=landlord"
-                id="landlord-service-link"
-                class="state__link state--landlord"
-              >
-                LANDLORD<br /> REPRESENTATION
-              </a>
-              <a
-                href="/experience?service=investment"
-                id="investment-service-link"
-                class="state__link state--investment"
-              >
-                INVESTMENT<br /> SALES
-              </a>
+        <div class="experience-main">
+          <div class="top">
+            <img src="images/logo.png" class="logo-upper-left"/>
+            <div class="ham-menu"></div>
+            <div class="services__hero">
+              <div class="experience-section-header">{{page.text_title}}</div>
+              <div class="services__links">
+                <a
+                  href="/experience?service=tenant"
+                  id="tenant-service-link"
+                  class="state__link state--tenant"
+                >
+                  TENANT<br /> REPRESENTATION
+                </a>
+                <a
+                  href="/experience?service=landlord"
+                  id="landlord-service-link"
+                  class="state__link state--landlord"
+                >
+                  LANDLORD<br /> REPRESENTATION
+                </a>
+                <a
+                  href="/experience?service=investment"
+                  id="investment-service-link"
+                  class="state__link state--investment"
+                >
+                  INVESTMENT<br /> SALES
+                </a>
+              </div>
+              <!-- <div class="services__description description-default">
+                {{ page.text_body }}
+              </div> -->
+              <div class="state state--tenant services__description">
+                {{ page.tenant_services_text }}
+              </div>
+              <div class="state state--landlord services__description">
+                {{ page.landlord_services_text }}
+              </div>
+              <div class="state state--investment services__description">
+                {{ page.investment_services_text }}
+              </div>
+              <button class="contact-us-link contact-us-button">CONTACT US</button>
             </div>
-            <!-- <div class="services__description description-default">
-              {{ page.text_body }}
-            </div> -->
-            <div class="state state--tenant services__description">
-              {{ page.tenant_services_text }}
-            </div>
-            <div class="state state--landlord services__description">
-              {{ page.landlord_services_text }}
-            </div>
-            <div class="state state--investment services__description">
-              {{ page.investment_services_text }}
-            </div>
-            <button class="contact-us-link contact-us-button">CONTACT US</button>
           </div>
-        </div>
-        <div class="bottom">
-          <div class="state state--tenant">
-            {% include service-example.html
-              examples=site.examples_tenant
-              multi-image=true
-            %}
-          </div>
-          <div class="state state--landlord">
-            {% include service-example.html
-              examples=site.examples_landlord
-              multi-image=true
-            %}
-          </div>
-          <div class="state state--investment">
-            {% include service-example.html
-              examples=site.examples_investment
-              multi-image=true
-            %}
+          <div class="bottom">
+            <div class="state state--tenant">
+              {% include service-example.html
+                examples=site.examples_tenant
+                multi-image=true
+              %}
+            </div>
+            <div class="state state--landlord">
+              {% include service-example.html
+                examples=site.examples_landlord
+                multi-image=true
+              %}
+            </div>
+            <div class="state state--investment">
+              {% include service-example.html
+                examples=site.examples_investment
+                multi-image=true
+              %}
+            </div>
           </div>
         </div>
 
