Fix some mobile layout issues on the experience page. Create a mixin for mobile and utilize it instead of having repetitive media queries all over the place.

--- a/_sass/about.scss
+++ b/_sass/about.scss
@@ -312,7 +312,7 @@
     }
   }
 
-  @media screen and (max-width: $breakpoint-small) {
+  @include mobile {
     .rounded-red-button {
       margin-bottom: 12px;
     }
