--- a/_sass/experience.scss
+++ b/_sass/experience.scss
@@ -44,13 +44,6 @@
     }
   }
 
-  .experience-section-header {
-    color: white;
-    font-size: 2.4em;
-    font-weight: 600;
-    letter-spacing: 2px;
-    padding-bottom: 40px;
-  }
   .contact-us-button {
     border-radius: 500px;
     font-size: 1.3em;
@@ -101,6 +94,14 @@
     &.active {
       color: white;
     }
+  }
+
+  .state__link--header {
+    color: white;
+    font-size: 2.4em;
+    font-weight: 600;
+    letter-spacing: 2px;
+    padding-bottom: 40px;
   }
 
   @media screen and (max-width: 1000px) {
