Place mobile padding not on bottom div (which may or may not contain content) but rather in the examples partial, and only if we actually have a carousel (preventing gap between hero content and footer in the case that we don't have carousels).

--- a/_includes/service-example.html
+++ b/_includes/service-example.html
@@ -1,32 +1,35 @@
-<!-- TODO: use this partial *within* the service-modal partial -->
-<div class="services-carousel">
-	{% for example in include.examples %}
-		<div>
-			<div class="service-section--highlights">
-				{% if include.multi-image %}
-					<div
-						class="service-highlight service-highlight--image"
-						style="background-image: url('{{ example.image_1 }}')"
-					></div>
-				{% endif %}
-				<div class="service-highlight service-highlight--text">
-					<h5 class="highlight__header">{{ example.header }}</h5>
-					<div class="inline-block">
-						<ul class="highlight__list">
-							{% for highlight in example.highlights %}
-								<li>
-									<div class="highlight__bullet"></div>
-									{{ highlight }}
-								</li>
-							{% endfor %}
-						</ul>
+{% if include.examples.size > 0 %}
+	<div class="services__examples">
+		<div class="services-carousel">
+			{% for example in include.examples %}
+				<div>
+					<div class="service-section--highlights">
+						{% if include.multi-image %}
+							<div
+								class="service-highlight service-highlight--image"
+								style="background-image: url('{{ example.image_1 }}')"
+							></div>
+						{% endif %}
+						<div class="service-highlight service-highlight--text">
+							<h5 class="highlight__header">{{ example.header }}</h5>
+							<div class="inline-block">
+								<ul class="highlight__list">
+									{% for highlight in example.highlights %}
+										<li>
+											<div class="highlight__bullet"></div>
+											{{ highlight }}
+										</li>
+									{% endfor %}
+								</ul>
+							</div>
+						</div>
+						<div
+							class="service-highlight service-highlight--image"
+							style="background-image: url('{{ example.image_2 }}')"
+						></div>
 					</div>
 				</div>
-				<div
-					class="service-highlight service-highlight--image"
-					style="background-image: url('{{ example.image_2 }}')"
-				></div>
-			</div>
+			{% endfor %}
 		</div>
-	{% endfor %}
 	</div>
+{% endif %}
