Abstract styles expanding-from-center hover state into a mixin. Apply it to the links on experience... keep?

--- a/_layouts/experience.html
+++ b/_layouts/experience.html
@@ -45,14 +45,16 @@
             <img src="images/logo.png" class="logo-upper-left"/>
             <div class="ham-menu"></div>
             <div class="services__hero">
-              <a
-                href="/experience.html"
-                id="experience-default-link"
-                class="state__link state__link--header state--default"
-              >
-                {{page.text_title}}
-              </a>
-              <div class="services__links">
+              <div class="state__links">
+                <a
+                  href="/experience.html"
+                  id="experience-default-link"
+                  class="state__link state__link--header state--default"
+                >
+                  {{page.text_title}}
+                </a>
+              </div>
+              <div class="services__links state__links">
                 <a
                   href="/experience?service=tenant"
                   id="tenant-service-link"
