--- a/_sass/experience.scss
+++ b/_sass/experience.scss
@@ -81,13 +81,19 @@
     padding-bottom: 4px;
   }
 
+  .state__links {
+    @include expanding-hover(white);
+  }
+
   .state__link {
     display: inline-block;
+    position: relative;
     color: $primary-color;
     font-size: 1.4em;
     letter-spacing: 2px;
     text-decoration: none;
-    padding: 12px 50px;
+    margin: 12px 50px;
+    padding-bottom: 3px;
     &.active {
       color: white;
     }
@@ -98,7 +104,7 @@
     font-size: 2.4em;
     font-weight: 600;
     letter-spacing: 2px;
-    padding-bottom: 40px;
+    margin-bottom: 40px;
   }
 
   @media screen and (max-width: 1000px) {
