--- a/_sass/index.scss
+++ b/_sass/index.scss
@@ -329,6 +329,7 @@ a {
     white-space: nowrap;
     margin: 30px 30px 0 0;
     > li {
+      @include expanding-hover(white);
       display: inline-block;
       font-size: 1.2em;
       padding: 8px;
@@ -340,25 +341,6 @@ a {
       }
       > a:hover {
         color: white;
-      }
-      > a:before {
-        content: "";
-        position: absolute;
-        width: 100%;
-        height: 2px;
-        bottom: 0;
-        left: 0;
-        background-color: white;
-        visibility: hidden;
-        -webkit-transform: scaleX(0);
-        transform: scaleX(0);
-        -webkit-transition: all 0.3s ease-in-out 0s;
-        transition: all 0.3s ease-in-out 0s;
-      }
-      > a:hover:before {
-        visibility: visible;
-        -webkit-transform: scaleX(1);
-        transform: scaleX(1);
       }
     }
   }
@@ -554,6 +536,7 @@ a {
       text-align: center;
       margin: 0;
       li {
+        @include expanding-hover($primary-color);
         > a {
           color: #888;
           line-height: 2;
@@ -566,25 +549,6 @@ a {
         }
         > a:hover {
           color: #888;
-        }
-        > a:before {
-          content: "";
-          position: absolute;
-          width: 100%;
-          height: 2px;
-          bottom: 0;
-          left: 0;
-          background-color: $primary-color;
-          visibility: hidden;
-          -webkit-transform: scaleX(0);
-          transform: scaleX(0);
-          -webkit-transition: all 0.3s ease-in-out 0s;
-          transition: all 0.3s ease-in-out 0s;
-        }
-        > a:hover:before {
-          visibility: visible;
-          -webkit-transform: scaleX(1);
-          transform: scaleX(1);
         }
       }
     }
