Increase font-size of example header. Globally apply outline: none to slick slides.

--- a/_sass/index.scss
+++ b/_sass/index.scss
@@ -1368,6 +1368,9 @@ a {
     }
   }
 }
+.slick-slide {
+ outline: none;
+}
 /**
  *  Do not remove the comment below. It's the markers used by gulp-inject to inject
  *  all your sass files automatically
