--- a/_sass/services.scss
+++ b/_sass/services.scss
@@ -73,6 +73,7 @@
 .highlight__list {
   text-align: left;
   padding-left: 0;
+  font-size: 1.2em;
   > li {
     list-style-type: none;
   }
@@ -109,11 +110,6 @@
   .service-highlight:nth-child(2):nth-last-child(2),
   .service-highlight:nth-child(3):nth-last-child(1) {
     flex-basis: 33.3333%;
-    &.service-highlight--text {
-      padding-right: 0;
-      // prevent overlap with abs positioned slick dots
-      padding-bottom: 56px;
-    }
   }
   .service-highlight:nth-child(2):nth-last-child(1) {
     @include mobile {
