Fix some issues with the order of the text-box in the various possible states of the service-example partial.

--- a/_sass/experience.scss
+++ b/_sass/experience.scss
@@ -27,6 +27,9 @@
   }
   .bottom {
     position: relative;
+    @include mobile {
+      padding: 0 30px 42px 30px
+    }
   }
 
   .services-carousel {
