--- a/_sass/services.scss
+++ b/_sass/services.scss
@@ -65,9 +65,6 @@
   flex-basis: 40%;
   padding-right: 22px;
   text-align: left;
-  @include mobile {
-    order: -1;
-  }
 }
 
 .highlight__list {
@@ -115,22 +112,20 @@
       // prevent text from overlapping abs positioned dots
       padding-bottom: 52px;
       @include mobile {
+        order: -1;
         padding-bottom: 0;
       }
     }
   }
-  .service-highlight:nth-child(2):nth-last-child(1) {
+  .service-highlight:nth-child(1):nth-last-child(2) {
     @include mobile {
-      // TODO: why aren't these styles being applied!!
-      .service-highlight--text {
+      &.service-highlight--text {
+        order: 1;
         .highlight__header {
-          font-size: 1.8em;
+          font-size: 1.4em;
+          color: $grey;
           margin: 10px 0;
         }
-      }
-      &.service-highlight--image {
-        // image should be the first flex item on index service modal
-        order: -2;
       }
     }
   }
@@ -153,11 +148,5 @@
 .services-carousel {
   .slick-dots {
     margin-top: 24px;
-  }
-}
-
-.services__examples {
-  @include mobile {
-    padding: 0 30px 42px 30px;
   }
 }
