Check to see if a slick carousel exists on the page before attempting to re-slick. Then re-slick, which seems to solve the carousel initialization issues. Include a separate js file for the homePage and apply this logic there as well.

--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -186,6 +186,7 @@
       </div>
    </div>
     {% include include-scripts.html %}
+    <script type="text/javascript" src="/scripts/home.js"></script>
     <script>
       $(document).ready(function() {
         $(".services-home-button").click(function() {
