--- a/_sass/mixins.scss
+++ b/_sass/mixins.scss
@@ -86,7 +86,13 @@
 
 @mixin mobile {
   @media screen and (max-width: $breakpoint-small) {
-    @content
+    @content;
+  }
+}
+
+@mixin small-desktop {
+  @media screen and (max-width: $breakpoint-small-desktop) {
+    @content;
   }
 }
 
