--- a/_sass/experience.scss
+++ b/_sass/experience.scss
@@ -14,14 +14,20 @@
   }
 
   .top {
+    position: relative;
     flex-basis: 60vh;
     flex-grow: 1;
-    background-image: url(../images/experience/bg.jpg);
+    background-image: url('../images/experience/bg.jpg');
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center 0;
     height: 60vh;
-    @include mobile {
+    @media screen and (max-height: 1000px) {
+      flex-basis: 100vh;
+      height: 100vh;
+    }
+    @include small-desktop {
+      flex-basis: 100vh;
       height: 100vh;
     }
   }
@@ -56,14 +62,14 @@
   }
 
   .services__hero {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translateY(-50%) translateX(-50%);
     max-width: $page-max-width;
-    position: relative;
     color: white;
     text-align: center;
     margin: 0 auto;
-    transform: translateY(-50%);
-    top: 50%;
-    padding-top: 1%;
     > h4 {
       font-size: 1.7em;
     }
@@ -75,11 +81,11 @@
     font-size: 1.1em;
     opacity: .9;
     padding: 40px 0;
+    @include small-desktop {
+      max-width: 70vw;
+    }
     @include mobile {
       max-width: 80vw;
-    }
-    @media screen and (max-width: $breakpoint-small-desktop) {
-      max-width: 70vw;
     }
   }
 
@@ -98,7 +104,7 @@
     font-size: 1.4em;
     letter-spacing: 2px;
     text-decoration: none;
-    margin: 12px 50px;
+    margin: 12px 32px;
     padding-bottom: 3px;
     &.active {
       color: white;
@@ -113,6 +119,18 @@
     margin-bottom: 40px;
   }
 
+  .hero__container {
+    width: 100%;
+    height: 100%;
+    margin-top: 88px;
+    position: relative;
+  }
+
+  .hero__spacer {
+    position: absolute;
+    padding-bottom: 800px;
+  }
+
   @media screen and (max-width: 1000px) {
     .services__hero {
       > p {
@@ -123,16 +141,6 @@
   @include mobile {
     .footer {
       height: 100%;
-    }
-    .services__hero {
-      position: static;
-      transform: translateY(0);
-      top: 0%;
-      width: 94vw;
-      padding: 80px 20px 40px 20px;
-    }
-    .study-carousel {
-      width: 100vw;
     }
   }
 }
