--- a/_sass/experience.scss
+++ b/_sass/experience.scss
@@ -66,7 +66,8 @@
     top: 50%;
     left: 50%;
     transform: translateY(-50%) translateX(-50%);
-    max-width: $page-max-width;
+    max-width: 100%;
+    width: $page-max-width;
     color: white;
     text-align: center;
     margin: 0 auto;
