Set last floorplan padding bottom to 0 (to prevent double padding, as the outer container already has it).

--- a/_sass/listing.scss
+++ b/_sass/listing.scss
@@ -130,6 +130,9 @@ $listing-padding: 30px;
 
   .floorplan {
     padding-bottom: $listing-padding;
+    &:last-child {
+      padding-bottom: 0;
+    }
   }
 
   .container {
