Include availabilites markup (with FPO content)

--- a/_layouts/listing.html
+++ b/_layouts/listing.html
@@ -127,6 +127,13 @@
                       <div>{{page.address-line-1}}</div>
                       <div>{{page.address-line-2}}</div>
                     </div>
+                    <h2 class="sidebar-header"><strong>AVAILABILITIES</strong></h2>
+                    <hr class ="light-line">
+                    <ul class="amenity-list">
+                        <li class="listing-info">- Suite 600: 9,148 SF (divisible)</li>
+                        <hr>
+                        <li class="listing-info">- Suite 510: 3,294 SF (not divisible)</li>
+                    </ul>
                     <h2 class="sidebar-header"><strong>HIGHLIGHTS</strong></h2>
                     <hr class ="light-line">
                     <ul class="amenity-list">
